KRSupdated_09122021/force-app/main/default/objects/OrderItems__c/OrderItems__c.object-meta.xml
<CustomObject>
    <label>OrderItems</label>
    <nameField>
        <displayFormat>OI-{0000}</displayFormat>
        <label>OrderItems Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OrderItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>