KRSupdated_09122021/force-app/main/default/objects/OrderItems__c/fields/MyOrder__c.field-meta.xml
<CustomField>
    <fullName>MyOrder__c</fullName>
    <label>MyOrder</label>
    <referenceTo>MyOrder__c</referenceTo>
    <relationshipLabel>OrderItems</relationshipLabel>
    <relationshipName>OrderItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>