KRSupdated_09122021/force-app/main/default/objects/OrderItems__c/fields/Product_Variant__c.field-meta.xml
<CustomField>
    <fullName>Product_Variant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Variant</label>
    <referenceTo>Product_Variant__c</referenceTo>
    <relationshipLabel>OrderItems</relationshipLabel>
    <relationshipName>OrderItems</relationshipName>
    <type>Lookup</type>
</CustomField>