KRSupdated_09122021/force-app/main/default/objects/OrderItems__c/fields/TotalPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalPrice__c</fullName>
    <formula>Quantity__c *  UnitPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TotalPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>