KRSupdated_09122021/force-app/main/default/objects/OrderItems__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Quantity__c</columns>
    <columns>TotalPrice__c</columns>
    <columns>UnitPrice__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>